--- a/templates/template.tex
+++ b/templates/template.tex
@@ -37,7 +37,7 @@ Atelier Floral  \\
 CHE-399.154.300  \\
  \\
  \\
-N°: 2035/21
+N$^\circ$: 2035/21
 \end{tabular}
 \hfill% move it to the right
 \begin{tabular}[t]{l@{}}
@@ -92,7 +92,8 @@ Livraison&1& forfait  &{{transaction.delivery_fee}}&{{transaction.delivery_fee}}
 
 \begin{figure*}[!b]
  \hspace*{-2cm}
-\includegraphics[width=21cm]{ {{ bill_name }}}
+%\includegraphics[width=21cm]{ {{ bill_name }}}
+\includegraphics[width=21cm]{/home/PetaleRouge/src/media/bill.pdf}
 \end{figure*}
 
  \end{document}
